err/products.financefields.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Products'...
Listing './lib/python3.5/site-packages/Products/FinanceFields'...
Listing './lib/python3.5/site-packages/Products/FinanceFields/Extensions'...
Compiling './lib/python3.5/site-packages/Products/FinanceFields/Money.py'...
***   File "./lib/python3.5/site-packages/Products/FinanceFields/Money.py", line 108
    'currency mismatch', `self`, `other`)
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Products/FinanceFields/fixedpoint.py'...
***   File "./lib/python3.5/site-packages/Products/FinanceFields/fixedpoint.py", line 186
    if isinstance(value, type(42)) or isinstance(value, type(42L)):
                                                               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products/FinanceFields/profiles'...
Listing './lib/python3.5/site-packages/Products/FinanceFields/profiles/default'...
Listing './lib/python3.5/site-packages/Products/FinanceFields/skins'...
Listing './lib/python3.5/site-packages/Products/FinanceFields/skins/financefields'...
Listing './lib/python3.5/site-packages/Products.FinanceFields-1.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
